lock favicons down and fix html-loader problem

--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
     "@musical-patterns/material": "^1.0.139",
     "@musical-patterns/metadata": "^1.0.18",
     "@musical-patterns/pattern": "^1.0.275",
-    "@musical-patterns/pattern-bapbo": "^1.0.10",
-    "@musical-patterns/pattern-beaten-path": "^1.0.260",
-    "@musical-patterns/pattern-hafuhafu": "^1.0.210",
-    "@musical-patterns/pattern-houndstoothtopia-theme": "^1.0.196",
+    "@musical-patterns/pattern-bapbo": "^1.0.11",
+    "@musical-patterns/pattern-beaten-path": "^1.0.261",
+    "@musical-patterns/pattern-hafuhafu": "^1.0.211",
+    "@musical-patterns/pattern-houndstoothtopia-theme": "^1.0.197",
     "@musical-patterns/pattern-material-qa": "^1.0.169",
-    "@musical-patterns/pattern-met-mos": "^1.0.20",
-    "@musical-patterns/pattern-moeom": "^1.0.98",
-    "@musical-patterns/pattern-omnizonk": "^1.0.165",
-    "@musical-patterns/pattern-playroom-test": "^1.0.233",
-    "@musical-patterns/pattern-prototyper": "^1.0.68",
-    "@musical-patterns/pattern-stepwise": "^1.0.152",
-    "@musical-patterns/pattern-template": "^1.0.139",
-    "@musical-patterns/pattern-tsraxcfaubdj": "^1.0.129",
-    "@musical-patterns/pattern-xenharmonic-series": "^1.0.185",
-    "@musical-patterns/pattern-zdaubyaos": "^1.0.175",
+    "@musical-patterns/pattern-met-mos": "^1.0.21",
+    "@musical-patterns/pattern-moeom": "^1.0.99",
+    "@musical-patterns/pattern-omnizonk": "^1.0.166",
+    "@musical-patterns/pattern-playroom-test": "^1.0.234",
+    "@musical-patterns/pattern-prototyper": "^1.0.69",
+    "@musical-patterns/pattern-stepwise": "^1.0.153",
+    "@musical-patterns/pattern-template": "^1.0.140",
+    "@musical-patterns/pattern-tsraxcfaubdj": "^1.0.130",
+    "@musical-patterns/pattern-xenharmonic-series": "^1.0.186",
+    "@musical-patterns/pattern-zdaubyaos": "^1.0.176",
     "@musical-patterns/playroom": "^1.0.424",
     "@musical-patterns/spec": "^1.0.50",
-    "@musical-patterns/utilities": "^1.0.619"
+    "@musical-patterns/utilities": "^1.0.619",
+    "favicons": "^6.0.0"
   }
 }
